# shelf

./: .flake8  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  linux.json  linux.toml  macos.json  pyproject.toml  shelf.py
.github/workflows/: release.yml  test.yml
shelf/: __init__.py  __main__.py  linux.toml  macos.toml  windows.toml
tests/: __init__.py  test_shelf.py
