[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shelf-backup"
version = "0.4.0"
description = "A stupidly simple backup tool: single file with zero dependencies"
authors = [{ name = "Radhe" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Systems Administration",
]
dependencies = []
keywords = ["backup", "restore", "dotfiles", "git", "homebrew", "simple"]

[project.optional-dependencies]
dev = ["ruff>=0.8.0", "pyrefly>=0.1.0"]

[project.scripts]
shelf = "shelf:main"

[project.urls]
Homepage = "https://github.com/rdyv/shelf"
Repository = "https://github.com/rdyv/shelf"
Issues = "https://github.com/rdyv/shelf/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["shelf"]

[tool.setuptools.package-data]
shelf = ["*.toml"]

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-ignore = ["E203"]

[tool.pyrefly]
python-version = "3.11"

